<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_light" />

    <TextView
        android:id="@+id/no_event"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/spacing_huge"
        android:paddingRight="@dimen/spacing_huge"
        android:gravity="center"
        android:text="@string/no_event"
        android:textAppearance="@style/TextFontLarge" />


    <LinearLayout
        android:id="@+id/languages_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/spacing_large"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/language_selection"
            android:textAppearance="@style/TextFontLarge" />

        <LinearLayout
            android:id="@+id/no_languages_available_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/no_available_languages"
                android:textAppearance="@style/TextFontNormal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/push_refresh"
                android:textAppearance="@style/TextFontSmall" />
        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/languages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fillViewport="true"
            android:scrollbars="vertical" />


    </LinearLayout>


</LinearLayout>








